Use docker copy to add repo to docker image

--- a/collateral/Dockerfile
+++ b/collateral/Dockerfile
@@ -3,10 +3,8 @@ FROM ubuntu:latest
 ENV DEBIAN_FRONTEND=noninteractive
 ENV HOST=0.0.0.0
 RUN apt-get update && \
-    apt-get install -y git \
-      npm \
-      rollup \
-    && git clone https://github.com/solacese/portal2semp
+    apt-get install -y git npm rollup 
+COPY docker-build/portal2semp portal2semp
 WORKDIR "/portal2semp"
 RUN /usr/bin/npm install
 
